
[tool.poetry]
name = "zoomcamp-mlops"
version = "0.1.0"
description = "MLOps Zoomcamp from DataTalks Club"
authors = ["Jean Metz"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.13"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.112.1"
ipdb = "^0.13.13"
pre-commit = "^3.8.0"
pip-licenses = "^5.0.0"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"
ruff = "^0.6.6"

[tool.poetry.group.notebook.dependencies]
ipykernel = "^6.29.5"
jupyterlab = "^4.2.5"
line-profiler = "^4.1.3"
memory-profiler = "^0.61.0"
psutil = "^6.0.0"
tabulate = "^0.9.0"
tqdm = "^4.66.5"

[tool.ruff]
extend-include = ["*.ipynb"]
indent-width = 4
line-length = 120
target-version = "py311"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
docstring-code-line-length = 92

[tool.ruff.lint]
preview = true
fixable = ["ALL"]
unfixable = []
select = [
  # Enable
  "A",     # flake8-builtins
  "ARG",   # flake8-unused-arguments
  "ASYNC", # flake8-async
  "B",     # flake8-bugbear
  "BLE",   # flake8-blind-except
  "C90",   # mccabe
  "D",     # pydocstyle
  "DOC",   # pydoclint
  "E",     # pycodestyle Error
  "F",     # Pyflakes
  "FURB",  # refurb - A tool for refurbishing and modernizing Python codebases.
  "G",     # flake8-logging-format
  "FAST",  # FastAPI
  "FBT",   # flake8-boolean-trap
  "I",     # isort
  "LOG",   # flake8-logging
  "N",     # pep8-naming
  "NPY",   # NumPy-specific rules
  "PD",    # pandas-vet
  "PERF",  # Perflint
  "PIE",   # flake8-pie
  "PL",    # Pylint
  "PT",    # flake8-pytest-style
  "PTH",   # flake8-use-pathlib
  "RET",   # flake8-return
  "RUF",   # Ruff-specific rules
  "S",     # flak8-bandit
  "SIM",   # flake8-simplify
  "SLF",   # flake8-self
  "UP",    # pyupgrade
  "T10",   # flake8-debugger
  "T20",   # flake8-print
  "TID",   # flake8-tidy-imports
  "TRY",   # tryceratops (TRY)
  "W",     # pycodestyle Warning
]
ignore = []

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
  # at least this three should be fine in tests:
  "S101", # asserts allowed in tests...
  "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
  "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
  # The below are debateable
  "PLR2004", # Magic value used in comparison, ...
  "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes
  "SLF",     # flake8-self
]

[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
pythonpath = ["./src", "./tests"]
markers = [
  "unit: marks tests as unit tests",
  "functional: marks tests as functional tests",
  "nondeterministic: mark a test as non-deterministic",
]
addopts = "-n 8"

[tool.coverage.report]
omit = ["**/__init__.py", ".mypy_cache", ".reports", ".git", "**/tests/*"]
show_missing = true

[tool.coverage.run]
omit = ["*/__init__.py", ".mypy_cache", ".reports", ".git"]
